@@ -6,6 +6,10 @@
 
 	* Smash.x3dv: 
 
+2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Smash.x3dv: 
+
 2014-10-08  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Smash.x3dv: 
